--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,23 @@
     text-decoration: none;
   }
 
-  * {
-    box-sizing: border-box; }
+* {
+  box-sizing: border-box; 
+}
   
-  canvas {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0; }
+canvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0; 
+}
+.card{
+  transition: transform .3s ;
+}
+.card:hover{
+  transform: scale(1.1);
+  z-index: 10;
+}
